# pycorec

./: .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  readme.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
pycorec/: .csv  __init__.py  __main__.py  cli.py  pycorec.py  pycorec2.0.1.py  pycorec_20230623.py  scrolledtreeview.py  test.py
tests/: IOLogWindow.py  __init__.py  pycorec1.0.0.py  pycorec1.0.1.py  pycorec1.0.2.py  pycorec1.0.3.py  pycorec1.0.4.py  pycorec1.0.5.py  pycorec1.0.6.py  pycorec1.0.7.py  pycorec_20230624.py  test_pycorec.py  testfromGPT.py  trans.py
