# pyproject.toml

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycorec"
version = "2.1.2"
description = "Interactive GUI tool to record clicked pixel coordinates on images"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.11"

authors = [
  { name = "Yuto Tanaka", email = "tanaka.yuto.u10@gmail.com" },
]

keywords = ["pycorec"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS :: MacOS X",
]

dependencies = [
  "customtkinter >=5.2.2,<6.0.0",
  "Pillow >=11.0.0,<13.0.0",
  "natsort >=8.4.0,<9.0.0",
  "openpyxl >=3.1.5,<3.2.0",
  "opencv-python >=4.10.0,<5.0.0",
  "numpy >=1.26,<2.0.0",
  "pandas >=2.2.0,<3.0.0",
  "styleframe >=4.2,<5.0",

]

[project.urls]
Homepage = "https://github.com/tnku10/pycorec"
Repository = "https://github.com/tnku10/pycorec"
Issues = "https://github.com/tnku10/pycorec/issues"
Changelog = "https://github.com/tnku10/pycorec/blob/main/CHANGELOG.md"

[project.scripts]
pycorec = "pycorec.pycorec:main"

[project.gui-scripts]
pycorec-gui = "pycorec.pycorec:main"

[tool.setuptools.packages.find]
include = ["pycorec", "pycorec.*"]
